[package]
name = "acs37800"
authors = ["Linus Leo Stöckli"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hacknus/acs37800-rs"
description = "Platform-agnostic driver for the ACS37800 current sensor."
readme = "README.md"
keywords = ["adc", "acs37800", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/acs37800"
homepage = "https://github.com/hacknus/acs37800-rs"
license = "Apache-2.0"

[dependencies]
modular-bitfield = "0.11.2"
modular-bitfield-to-value = { git = "https://github.com/hacknus/modular-bitfield-to-value"}
nb = "1"

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
